--- a/talker.ini
+++ b/talker.ini
@@ -2,5 +2,7 @@
 
 port = "/dev/ttyS0"
 speed = 19200
+;speed = 9600
 pin_dtr = 1				; пин для переключения прием.передатчика
-send_delay = 3500		; адержка до переключения передатчика на прием (usec)
+send_delay = 3500		; адержка до переключения передатчика на прием (usec) для 19200
+;send_delay = 7000		; адержка до переключения передатчика на прием (usec) для 9600
