atomic spinlock, INFO

--- a/talker.ini
+++ b/talker.ini
@@ -1,8 +1,49 @@
 [Port]
 
 port = "/dev/ttyS0"
-speed = 19200
-;speed = 9600
 pin_dtr = 1				; пин для переключения прием.передатчика
+
+speed = 19200
 send_delay = 3500		; адержка до переключения передатчика на прием (usec) для 19200
+
+;speed = 9600
 ;send_delay = 7000		; адержка до переключения передатчика на прием (usec) для 9600
+
+[Gates]
+number = 4
+
+[gate-1]
+dmts = 200
+dmin = 0
+dmax = 200
+pin = 3
+pindir = 1
+dir = 1
+delay = 100
+
+[gate-2]
+dmts = 400
+dmin = 201
+dmax = 400
+pin = 3
+pindir = 1
+dir = 0
+delay = 100
+
+[gate-3]
+dmts = 600
+dmin = 401
+dmax = 600
+pin = 4
+pindir = 2
+dir = 1
+delay = 100
+
+[gate-4]
+dmts = 800
+dmin = 601
+dmax = 1000
+pin = 4
+pindir = 2
+dir = 0
+delay = 100
