worked. scheduler_executor added

--- a/talker.ini
+++ b/talker.ini
@@ -1,11 +1,12 @@
+[Main]
+main_delay = 1000000		; usec
+
 [Port]
 
 port = "/dev/ttyS0"
 pin_dtr = 1				; пин для переключения прием.передатчика
-
 speed = 19200
 send_delay = 3500		; адержка до переключения передатчика на прием (usec) для 19200
-
 ;speed = 9600
 ;send_delay = 7000		; адержка до переключения передатчика на прием (usec) для 9600
 
